# sim-citizen

./: BROCHURE.md  CONTRIBUTING.md  Cargo.toml  README.md  features.toml  release-plz.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: feature.md
.github/workflows/: ci.yml
crates/sim-citizen/: BROCHURE.md  Cargo.toml  README.md
crates/sim-citizen-derive/: BROCHURE.md  Cargo.toml  README.md
crates/sim-citizen-derive/src/: attrs.rs  expand.rs  lib.rs
crates/sim-citizen-derive/tests/: ui.rs
crates/sim-citizen-derive/tests/ui/fail/: citizen_duplicate_symbol.rs  citizen_duplicate_symbol.stderr  citizen_field_citizen_mode.rs  citizen_field_citizen_mode.stderr  citizen_field_duplicate_with.rs  citizen_field_duplicate_with.stderr  citizen_field_list_mode.rs  citizen_field_list_mode.stderr  citizen_field_unsupported_key.rs  citizen_field_unsupported_key.stderr  citizen_missing_default.rs  citizen_missing_default.stderr  citizen_unsupported_key.rs  citizen_unsupported_key.stderr  citizen_with_bad_decode.rs  citizen_with_bad_decode.stderr  citizen_with_bad_encode.rs  citizen_with_bad_encode.stderr  non_citizen_duplicate_reason.rs  non_citizen_duplicate_reason.stderr  non_citizen_empty_reason.rs  non_citizen_empty_reason.stderr  non_citizen_missing_descriptor.rs  non_citizen_missing_descriptor.stderr  non_citizen_missing_kind.rs  non_citizen_missing_kind.stderr  non_citizen_unsupported_key.rs  non_citizen_unsupported_key.stderr
crates/sim-citizen-derive/tests/ui/pass/: citizen_custom_fixtures.rs  citizen_helper_name_collision.rs  non_citizen_missing_descriptor.rs  non_citizen_valid.rs
crates/sim-citizen-derive/tests/ui/support/: citizen_shim.rs
crates/sim-citizen/src/: card.rs  census.rs  conformance.rs  eq.rs  example.rs  field.rs  lib.rs  read_construct.rs  registry.rs  runtime.rs  symbol.rs  tests.rs
docs/agents/: card-index.json  cards.jsonl
docs/diagrams/src/: README.md
docs/humans/: README.md
recipes/citizen-roundtrip/: Cargo.toml  README.md  recipe.toml
recipes/citizen-roundtrip/src/: main.rs
xtask/src/: file_sizes.rs  main.rs
