
[workspace]
resolver = "3"
members = [
  "crates/sim-citizen",
  "crates/sim-citizen-derive",
  "xtask",
]

[workspace.package]
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/sim-nest/sim-citizen"
homepage = "https://github.com/sim-nest/sim-citizen"

[workspace.lints.rust]
unsafe_code = "forbid"
