[package]
name = "sim-citizen-derive"
version = "0.1.1"
edition = "2024"
license = "MPL-2.0"
description = "Proc macros for SIM citizen values."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-citizen"
homepage = "https://github.com/sim-nest/sim-citizen"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1", features = ["span-locations"] }
quote = "1"
syn = { version = "2", features = ["full"] }

[dev-dependencies]
inventory = "0.3"
trybuild = "1"

[lints]
workspace = true
