[package]
name = "sim-citizen"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
description = "Citizen support outside the SIM kernel."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-citizen"
homepage = "https://github.com/sim-nest/sim-citizen"

[dependencies]
inventory = "0.3"
sim-kernel = { version = "0.1.0" }

[dev-dependencies]
sim-citizen-derive = { version = "0.1.0", path = "../sim-citizen-derive" }

[lints]
workspace = true
